WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99601
[GTK] AudioBusGtk sometimes fails to load the HRTF database
https://bugs.webkit.org/show_bug.cgi?id=99601
Summary
[GTK] AudioBusGtk sometimes fails to load the HRTF database
Philippe Normand
Reported
2012-10-17 08:24:23 PDT
And it's totally silent. It seems like our use of g_file_query_exist() in ::loadPlatformResource() is wrong. I think it would be better to not use that API, try to load the file and if it fails consider using the "uninstalled resource files" code path. I started a patch. Will try to post it soon.
Attachments
Patch
(7.95 KB, patch)
2012-10-17 23:58 PDT
,
Philippe Normand
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2012-10-17 23:58:36 PDT
Created
attachment 169354
[details]
Patch
Philippe Normand
Comment 2
2012-10-18 08:28:15 PDT
Committed
r131755
: <
http://trac.webkit.org/changeset/131755
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug