[GTK] AudioBusGtk sometimes fails to load the HRTF database https://bugs.webkit.org/show_bug.cgi?id=99601

Reviewed by Martin Robinson.

AudioBusGtk now first lookup for the uninstalled resource files,
if the AUDIO_RESOURCES_PATH environment variable is
set. Additionally the audio file reader is now better dealing with
errors, returning an empty AudioBus in such cases and issuing
warnings on the console output. The cleanup of some member
variables was also moved to the destructor.

* platform/audio/gstreamer/AudioFileReaderGStreamer.cpp:
(AudioFileReader):
(WebCore::AudioFileReader::AudioFileReader):
(WebCore::AudioFileReader::~AudioFileReader): Clear and free
member variables. This was done in createBus before.
(WebCore::AudioFileReader::handleMessage): Issue warnings in case
of error and exit from the main loop so the pipeline is not
forever stuck.
(WebCore::AudioFileReader::createBus): Return an empty bus in case
of error.
* platform/audio/gtk/AudioBusGtk.cpp:
(WebCore::AudioBus::loadPlatformResource): Load uninstalled
resources first if AUDIO_RESOURCES_PATH is set.

Canonical link: https://commits.webkit.org/117709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131755 268f45cc-cd09-0410-ab3c-d52691b4dbfc